# SolanaRustTypeScriptHelloWorld

./: .gitignore  README.md  package.json
src/client/: hello_world.ts  main.ts  utils.ts
src/program/: Cargo.toml
src/program/src/: lib.rs
